[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modbus4mqtt"
version = "0.7.1"
description = "A YAML-defined bidirectional Modbus to MQTT interface"
authors = [
    { name = "Travis Howse", email = "tjhowse@gmail.com" }
]
readme = "README.md"
license-files = ["LICENSE"]
requires-python = ">=3.5.0"
dependencies = [
    "ruamel.yaml>=0.16.12",
    "paho-mqtt>=1.5.0,<2",
    "pymodbus>=2.3.0,<3.0.0",
    "click>=6.7",
    "SungrowModbusTcpClient>=0.1.6"
]

[project.urls]
Homepage = "https://github.com/tjhowse/modbus4mqtt"

[project.optional-dependencies]
test = [
    "nose2>=0.9.2",
    "nose2[coverage_plugin]>=0.6.5"
]

[project.scripts]
modbus4mqtt = "modbus4mqtt.modbus4mqtt:main"

[tool.setuptools.packages.find]
exclude = ["tests"]
